[project]
name = "energopribor-crm-ai"
version = "0.1.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic>=2.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "langchain",
    "openai",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
